--- a/apps/production/hibiscus-server/kustomization.yaml
+++ b/apps/production/hibiscus-server/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - hibiscus-password-secret.yaml
   - hibiscus-mysql-secret.yaml
   - hibiscus-mysql-claim.yaml
+  - hibiscus-claim.yaml
 # patches:
 #   - path: patch.yaml
 #     target:
