--- a/apps/base/hibiscus-server/manifest.yaml
+++ b/apps/base/hibiscus-server/manifest.yaml
@@ -87,7 +87,7 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 100Mi
+      storage: 5G
 ---
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
