code-server: renamed auth secret.

--- a/apps/production/code-server/code-server-auth-secret.yaml
+++ b/apps/production/code-server/code-server-auth-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: code-server
+    name: code-server-dashboard-auth
     namespace: code-server
 type: kubernetes.io/basic-auth
 stringData:
