--- a/apps/production/code-server/ingressConfig.yaml
+++ b/apps/production/code-server/ingressConfig.yaml
@@ -13,7 +13,7 @@ spec:
     - match: Host(`code.vandelocht.uk`)
       kind: Rule
       services:
-        - name: http
+        - name: code-server
           port: 8080
       middlewares:
         - name: svc-code-server-headers
