guacamole: added metadata to secret

--- a/apps/production/guacamole/guacamole-secret.yaml
+++ b/apps/production/guacamole/guacamole-secret.yaml
@@ -3,6 +3,11 @@ kind: Secret
 metadata:
     name: guacamole
     namespace: guacamole
+    labels:
+        app.kubernetes.io/managed-by: Helm
+    annotations:
+        meta.helm.sh/release-name: guacamole
+        meta.helm.sh/release-namespace: guacamole
 stringData:
     postgresPassword: ENC[AES256_GCM,data:KNL1WkGpk4VrFFGQrBP+jMbA+ZdLd6b/8hqEp0T90TPQfE1zaiqPl3iDBFJ7,iv:4ERAljxton4+Sp7CfpqIJppXxK4/7VyeX90Tpn7pTTM=,tag:4471hhI5fhE9JRsGflDIQQ==,type:str]
     password: ENC[AES256_GCM,data:DanCsYZkwzIWGWIH77MlC5IKU3PDZdRuJ4sQ1PwfrONovMYh,iv:ri/eJGGWxZ/fKPUZTues3mN/ow/gO09VrjSgmiAuMZA=,tag:HkGZwhY5rTfQpQfuKvHWAA==,type:str]
