guacamole: Changed secret key for user password.

--- a/apps/base/guacamole/manifest.yaml
+++ b/apps/base/guacamole/manifest.yaml
@@ -87,7 +87,7 @@ spec:
           existingSecret: guacamole
           secretKeys:
             adminPasswordKey: postgresPassword
-            userPasswordKey: password
+            userPasswordKey: POSTGRES_PASSWORD
             replicationPasswordKey: replicationPassword
           database: guacamole
           username: guacamole
