--- a/apps/production/guacamole/guacamole-secret.yaml
+++ b/apps/production/guacamole/guacamole-secret.yaml
@@ -10,7 +10,7 @@ metadata:
         meta.helm.sh/release-namespace: guacamole
 stringData:
     postgresPassword: ENC[AES256_GCM,data:KNL1WkGpk4VrFFGQrBP+jMbA+ZdLd6b/8hqEp0T90TPQfE1zaiqPl3iDBFJ7,iv:4ERAljxton4+Sp7CfpqIJppXxK4/7VyeX90Tpn7pTTM=,tag:4471hhI5fhE9JRsGflDIQQ==,type:str]
-    password: ENC[AES256_GCM,data:DanCsYZkwzIWGWIH77MlC5IKU3PDZdRuJ4sQ1PwfrONovMYh,iv:ri/eJGGWxZ/fKPUZTues3mN/ow/gO09VrjSgmiAuMZA=,tag:HkGZwhY5rTfQpQfuKvHWAA==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:DanCsYZkwzIWGWIH77MlC5IKU3PDZdRuJ4sQ1PwfrONovMYh,iv:ri/eJGGWxZ/fKPUZTues3mN/ow/gO09VrjSgmiAuMZA=,tag:HkGZwhY5rTfQpQfuKvHWAA==,type:str]
     replicationPassword: ENC[AES256_GCM,data:KkURkPUFn2rYda4pv85Xq1dNUhT0+rWnuaofq4a2ldG/Bat3umB3Oj2/fMqYaaM=,iv:d3Fwuga5DxTNzctH7o2+r4YE6khCeJodoJF4+kYBJxE=,tag:o7aCKNy9BaSS4VlitMWvlw==,type:str]
 sops:
     kms: []
