guacamole: updated secret.

--- a/apps/production/guacamole/guacamole-secret.yaml
+++ b/apps/production/guacamole/guacamole-secret.yaml
@@ -9,9 +9,16 @@ metadata:
         meta.helm.sh/release-name: guacamole
         meta.helm.sh/release-namespace: guacamole
 stringData:
-    postgresPassword: ENC[AES256_GCM,data:L0Qjwp6rewEG3DIsRUIGmIz/cxkV11B9RhGKoWlS7ObXw8dQa3KWAhFHkiEl,iv:Fo+COW4Mxh2w4B9ZGzVIQv5SUyFQ+iQ1hr7D0apnrhc=,tag:axzu5pu4hEcUMWFZf/RDJA==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:xhFB8dfDqYZ0wbmGL/0gf9RKMPi+muwL3vcvUFHSMa/v13Di,iv:AI4wnagup+8KczxTf8Y9+axTreb7LbmUqzb828QhWHE=,tag:rGT12XFw7Ul09KEa2l1pJA==,type:str]
-    replicationPassword: ENC[AES256_GCM,data:sIRP47gzX5iUIbORX0LmQMHFyWhpnxrVQrGzEUSFDozOPh5yJSCZ0Ru7XS9SciM=,iv:SvPXzcI8YkrPHkPg02B6vKKTGCtBmpMrP8h2piFfTIU=,tag:GbD4u6tptyhbEdeHek+J7w==,type:str]
+    postgresPassword: ENC[AES256_GCM,data:+H5xmGp7O1WMF9FnYGfkUdD6Dfyz8kyXgESfvuOtPLfvr2hEszti4T+Jp6ul,iv:+y1M7sV0yK3bXHOF8ffxb4U72s9YlNFFxENOVwUmcd0=,tag:J3e7UqOhWw3vc5hinVaNqw==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:d27mZJsq4rPJYbo7ueJU7dsVQeCAnfVgysMcmwSNJiVSgA5k,iv:e0TssXdlQQwLsDQDNmfO6HKjkHzw25nIIPHntdbJEBI=,tag:AjdyEDKCrEiJfgYvV23Q+w==,type:str]
+    replicationPassword: ENC[AES256_GCM,data:hWTTlsy9fwKRK69FwCTNtFolRBdE6ufoR51fysmDPwsFXLzCk//jjJ2jxxGioRQ=,iv:IrchtbK0tmm6A57ueXZ9Y+NY7jO8MA7xYI0tSLWGdqI=,tag:PMVcmFVOyEB02qy++jqJVQ==,type:str]
+    GUACD_HOSTNAME: ENC[AES256_GCM,data:LtFwQl0ba0Bm4guSOsVh,iv:7F+Trqrig2oee58nQCWWBkqt9wA/BIzAVWVdaS4voC0=,tag:5CdQ5wO+nZO6EVTaThpNFQ==,type:str]
+    GUACD_PORT: ENC[AES256_GCM,data:Jrciag==,iv:u52CygUkVnabw56J0IWK4zujfar2ZNWiRXMU1vh5hlI=,tag:sIcZ+kyngY9sT1NovkKr+g==,type:str]
+    POSTGRES_HOSTNAME: ENC[AES256_GCM,data:BbZ2NOVzqijiYA==,iv:jOSDCrgnAhowtUKV5A9SzfThCyEPcg8e20gSuUsBgU8=,tag:G8QCjH0Zxz1NX1kiYbFb7A==,type:str]
+    POSTGRES_PORT: ENC[AES256_GCM,data:QUxB6w==,iv:X3vEPKbR4Rwt30ZFZArKqSpXmblEaYxNPjBI1AvHBto=,tag:1yqN5ntlV6Mk/ScEgBuO6g==,type:str]
+    POSTGRES_DATABASE: ENC[AES256_GCM,data:SQO4dMkPic21,iv:llYrnVLZpi8+c7B94qUnhW9ZsX1gvxcyd1jmkoxaOZg=,tag:VQB3hx1I8QbQ/oe9GrSmgg==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:A3Eyw0bYdbqE,iv:c0cD6b+sEdmPnHuhJUDWxsQ5QtEdYFogxKA1w8TbHW8=,tag:wt810gZaz1K6HiUf+uWQNg==,type:str]
+    WEBAPP_CONTEXT: ENC[AES256_GCM,data:uLqXtw==,iv:Hf4CmXdZoZyfHRwbQOW0cXjjwxesC0VtPnA3Q4QyPnc=,tag:3/vamTahZmQx+7SG/1cErA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,14 +28,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOaGRvdVNScERZZGpZZ0ZZ
-            NUNLNmx1OG9sd2hFOUtoSmtoTGxKZUs5bkFJClphL05wYUpmclJQanp4cW1NNjNS
-            M2haQ2JVMTNUdWhxeXBMMW1wL0FJRW8KLS0tIHhOM1ZwZ2ZQeFJSUVB0TXlXQXp2
-            UG9PbjhiME5heWhzcktvbGFteGthVU0KJdobOpZhO5uSuDoSC4nj5FuJRVIFl0el
-            uRqGJYH494UNeO43wG9IXrmM0f07dSqJmmSGsKlzQIlzW/++OZskag==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNcW1NVElFNnl6aDVYR251
+            THhhWVEraUFndWVXcTkwR2FNSm9JNUpDcFRZCkZYMUZkcG1ZVEgramZOY0hHclJH
+            MnIvSXZZVEM3Rk8vSi9lNzJtUjR1QlUKLS0tICt3NW01TkdPSFVkSlZTVTh2OWxp
+            NnZZMDVIU0tjWFNtSjJWTnBzWmozU2MKZgtoDwXS1hl1b1TQlSoVdQIC8jD8qgat
+            IP29YANu4r/Vb0eDFe7MCEIBXQGbRPP999sZ3FiP9gyU3U8tbSzWiw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-07T20:54:50Z"
-    mac: ENC[AES256_GCM,data:pkZmoRcsTKGoruqkhwx7UjuRc6drAO857v1u60TFTEH102x29Vh6BSPmt32xg5mm0yXf3zMlSylQmKTICxe3IZtsErShUAUb5Z2UcJ+Nwdw/feuuCiR0/+sNr1TBtLNsffxUzObUeDVfhkif7XengfIsETM9iDEE4keY/zL30Vg=,iv:fCzCeoa/vKyMxnd8ukuv7kszFT57zUE0B+tpS5ov4P8=,tag:pMHh9jwsXRIGW5PT8wmh+Q==,type:str]
+    lastmodified: "2024-09-09T20:00:24Z"
+    mac: ENC[AES256_GCM,data:2QG9tFNBPHFwrWgsRPWM4tK+e/KZt2KEuuiNsKZW9PGIjDSn6xBbFjnQr+ZKHg/TryyoMnT7qyRXu+cp7/nkMGUjdnePs3u+3E47TUJUc1vgrTVaf1aWqa0BcDpRqB/zKmxl+mDusMaTEAUt7P7Sw4y5TTTGFfxvTgVzWLaAq5g=,iv:69lAD1B5C4DOYVw89I3RR8a7/xPfp/A1I7DVKpRdAI8=,tag:u4T1x5UeI/r9fSE/8Ko+hw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
