guacamole: Added ENV to secret
Apparently the secret are getting read from the secret.

--- a/apps/production/guacamole/guacamole-secret.yaml
+++ b/apps/production/guacamole/guacamole-secret.yaml
@@ -9,16 +9,17 @@ metadata:
         meta.helm.sh/release-name: guacamole
         meta.helm.sh/release-namespace: guacamole
 stringData:
-    postgresPassword: ENC[AES256_GCM,data:+H5xmGp7O1WMF9FnYGfkUdD6Dfyz8kyXgESfvuOtPLfvr2hEszti4T+Jp6ul,iv:+y1M7sV0yK3bXHOF8ffxb4U72s9YlNFFxENOVwUmcd0=,tag:J3e7UqOhWw3vc5hinVaNqw==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:d27mZJsq4rPJYbo7ueJU7dsVQeCAnfVgysMcmwSNJiVSgA5k,iv:e0TssXdlQQwLsDQDNmfO6HKjkHzw25nIIPHntdbJEBI=,tag:AjdyEDKCrEiJfgYvV23Q+w==,type:str]
-    replicationPassword: ENC[AES256_GCM,data:hWTTlsy9fwKRK69FwCTNtFolRBdE6ufoR51fysmDPwsFXLzCk//jjJ2jxxGioRQ=,iv:IrchtbK0tmm6A57ueXZ9Y+NY7jO8MA7xYI0tSLWGdqI=,tag:PMVcmFVOyEB02qy++jqJVQ==,type:str]
-    GUACD_HOSTNAME: ENC[AES256_GCM,data:LtFwQl0ba0Bm4guSOsVh,iv:7F+Trqrig2oee58nQCWWBkqt9wA/BIzAVWVdaS4voC0=,tag:5CdQ5wO+nZO6EVTaThpNFQ==,type:str]
-    GUACD_PORT: ENC[AES256_GCM,data:Jrciag==,iv:u52CygUkVnabw56J0IWK4zujfar2ZNWiRXMU1vh5hlI=,tag:sIcZ+kyngY9sT1NovkKr+g==,type:str]
-    POSTGRES_HOSTNAME: ENC[AES256_GCM,data:BbZ2NOVzqijiYA==,iv:jOSDCrgnAhowtUKV5A9SzfThCyEPcg8e20gSuUsBgU8=,tag:G8QCjH0Zxz1NX1kiYbFb7A==,type:str]
-    POSTGRES_PORT: ENC[AES256_GCM,data:QUxB6w==,iv:X3vEPKbR4Rwt30ZFZArKqSpXmblEaYxNPjBI1AvHBto=,tag:1yqN5ntlV6Mk/ScEgBuO6g==,type:str]
-    POSTGRES_DATABASE: ENC[AES256_GCM,data:SQO4dMkPic21,iv:llYrnVLZpi8+c7B94qUnhW9ZsX1gvxcyd1jmkoxaOZg=,tag:VQB3hx1I8QbQ/oe9GrSmgg==,type:str]
-    POSTGRES_USER: ENC[AES256_GCM,data:A3Eyw0bYdbqE,iv:c0cD6b+sEdmPnHuhJUDWxsQ5QtEdYFogxKA1w8TbHW8=,tag:wt810gZaz1K6HiUf+uWQNg==,type:str]
-    WEBAPP_CONTEXT: ENC[AES256_GCM,data:uLqXtw==,iv:Hf4CmXdZoZyfHRwbQOW0cXjjwxesC0VtPnA3Q4QyPnc=,tag:3/vamTahZmQx+7SG/1cErA==,type:str]
+    postgresPassword: ENC[AES256_GCM,data:47TuWWkLu4hcB/uJiNqbbnV4M2gmDOLG0QuO4NA+iTx2ZHVc/4diK/59OnKv,iv:QtB3xbiaTzDPU6MzYMCOGkHynw0M/Cer9h0BsDISXiM=,tag:whO65qyzFAJbs8clyQqR8w==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:WCBPzqJEXiteNLMpmpi6VjnJcdFwHiO5c/7wq3uv6ftoi/eD,iv:qZuAqp9lmxoCO5avQv/PktzCDkoSAS47RNwQq8i7sm4=,tag:rbA9nBjqAUEwmA0P6UXGvw==,type:str]
+    replicationPassword: ENC[AES256_GCM,data:d58mHcdLa/htDGJy0hpdHeXYe+fzpgH8NLbBEfvF8+JyAfENVxAk6DVOvRZe7KQ=,iv:WVCAV2FlRCYWXcNf6+nsmaZKvuYG+MyBpaTZMWRmCXE=,tag:mEaMtA1ZD+9DcTMj0bRqdA==,type:str]
+    GUACD_HOSTNAME: ENC[AES256_GCM,data:l4InU6RgzP71WQpAY/yu,iv:hFP+7UlUoAfFgyt+vYLX3u8fO99NAZMQtlIHTw2doXU=,tag:0nZrzEYf2/HfOMG9cgXOQw==,type:str]
+    GUACD_PORT: ENC[AES256_GCM,data:iS/+fw==,iv:o8Rn59cZddWYN0ERiglJ50he2mJDAu9Vif3u2lqnqbM=,tag:uc5cnyEasJQvEPLFD3cITA==,type:str]
+    POSTGRES_HOSTNAME: ENC[AES256_GCM,data:zHVXCptmxYTyTg==,iv:9I+e5extjWs5H3xY0ISA777gl8Kj9ADFuxOCAo9/Mds=,tag:UMRXF1XD912vfciaQQkK7w==,type:str]
+    POSTGRES_PORT: ENC[AES256_GCM,data:PZQv2Q==,iv:ErQwbyoFmr54Vx+CZZJt+BczNOTtBMXLnYTq+lVri5s=,tag:egTYAvETdWFglYaoonKX6Q==,type:str]
+    POSTGRES_DATABASE: ENC[AES256_GCM,data:K4EXFdpF/2Ul,iv:sJrPe8qNb1D6rE0msnPXehIf0BEUXwPIY5WGQxUb1Bc=,tag:q9BmHdxte1g6vJLh7zNFww==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:pevH2zrrzE49,iv:JMuj8XOj11jpnKLoFr93voN6ki1FmqVk2umCBcSJY3I=,tag:4ee6lb+9bGr4J2l1LogcDQ==,type:str]
+    WEBAPP_CONTEXT: ENC[AES256_GCM,data:ZjrQ2A==,iv:GGtqHlfZv20hehW/x+lfXFpTe6fxgjOpoeA1+uq3KC8=,tag:Cvd8jnxYi31jkqphh++o0g==,type:str]
+    TOTP_ENABLED: ENC[AES256_GCM,data:mxb2Kw==,iv:0vOiyqRMzDzpOEYV7wKTLSvqfp5weQVgoIiNgmao5ZA=,tag:aErxCK5h6PRiz0UYyfX5Cg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -28,14 +29,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNcW1NVElFNnl6aDVYR251
-            THhhWVEraUFndWVXcTkwR2FNSm9JNUpDcFRZCkZYMUZkcG1ZVEgramZOY0hHclJH
-            MnIvSXZZVEM3Rk8vSi9lNzJtUjR1QlUKLS0tICt3NW01TkdPSFVkSlZTVTh2OWxp
-            NnZZMDVIU0tjWFNtSjJWTnBzWmozU2MKZgtoDwXS1hl1b1TQlSoVdQIC8jD8qgat
-            IP29YANu4r/Vb0eDFe7MCEIBXQGbRPP999sZ3FiP9gyU3U8tbSzWiw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkZ0YwZ1VRSDJ4QkNhY0E4
+            OFVTdW1vTE92MC91bHVFQUNvODBkaU8xaTBBCkZtbC9uS3hIaXpsS2hCcVBrc00z
+            M2JidWJOQzRUNEFDaU83ZE9XL1hqRG8KLS0tIDJobllVa1Zrbld0ckFEK0pqMWVL
+            OVZ6OW1QK3lhQm05ZGVTS1hXL1BqZDgKNW5m/MOuM5RQBZJFxtDqm6lzAoP6L5tZ
+            l1hXnzLvm1yfvGxIUo1MvDI4oRfatCPi2Ev2JuM0zCO7Y1PL5qhshw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-09T20:00:24Z"
-    mac: ENC[AES256_GCM,data:2QG9tFNBPHFwrWgsRPWM4tK+e/KZt2KEuuiNsKZW9PGIjDSn6xBbFjnQr+ZKHg/TryyoMnT7qyRXu+cp7/nkMGUjdnePs3u+3E47TUJUc1vgrTVaf1aWqa0BcDpRqB/zKmxl+mDusMaTEAUt7P7Sw4y5TTTGFfxvTgVzWLaAq5g=,iv:69lAD1B5C4DOYVw89I3RR8a7/xPfp/A1I7DVKpRdAI8=,tag:u4T1x5UeI/r9fSE/8Ko+hw==,type:str]
+    lastmodified: "2024-09-09T20:14:26Z"
+    mac: ENC[AES256_GCM,data:pQIE5guA04m8CFIe6Si6PBaNBDaBgAAYVLIbFYneutzDxSttW6dDSLnWbaou/hb6UoG/RuypKmjH5L5VFZNh0dPYMlp7nST0+QmgezdJCS4kn992cGk//aeitJ5EUVeSVYEY5bYRAjhSVhlkBxR3KlKVR34GnRPH/RzuPCszBLQ=,iv:WFT+l0xwnWpUnA+xhl/teHq72vAEwJgA+yerAMlY7ag=,tag:gQ9wvTqUeA6QcRQgyuH4Mg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
