--- a/infrastructure/base/longhorn/manifest.yaml
+++ b/infrastructure/base/longhorn/manifest.yaml
@@ -33,6 +33,14 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: longhorn
+  install:
+    crds: Create
+    remediation:
+      retries: 3
+  upgrade:
+    crds: CreateReplace
+    remediation:
+      retries: 3
   interval: 10m0s
   targetNamespace: longhorn-system
   values:
