--- a/clusters/production/infrastructure.yaml
+++ b/clusters/production/infrastructure.yaml
@@ -309,3 +309,25 @@ spec:
   timeout: 5m
   prune: true
   wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cloudnative-pg
+  namespace: flux-system
+spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  dependsOn:
+    - name: longhorn
+  interval: 1h
+  retryInterval: 1h
+  timeout: 2h
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./infrastructure/production/cloudnative-pg
+  prune: true
+  wait: true
