--- a/apps/production/forgejo/forgejo-admin-secret.yaml
+++ b/apps/production/forgejo/forgejo-admin-secret.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-data:
+stringData:
     email: ENC[AES256_GCM,data:xOHMQnWLTn7Ps/Pjm/+/NkI=,iv:YVo9Ilp5WvvpwF3zmBoOaMdxuL509BMn8stRaUVPkXI=,tag:/e+KicBKJfhGLQKK6wRIBA==,type:str]
     password: ENC[AES256_GCM,data:EEQi3E4DU95Lp/xC80TMikqdtImcWeEnYhkUQwpzDYA=,iv:ZsJWrJWBpCFsZ/TZvW73g/40R9ZS4ySACsIIb4illcw=,tag:BCBJ9PidgHNkB8L/7U032w==,type:str]
     username: ENC[AES256_GCM,data:qBB5,iv:gE2CvFhlBnNKHvR0o3AJ4cmqkgnH0Eq/FD4vZDPizvY=,tag:mlrWp+vh1O94CgW1XC5pRA==,type:str]
