forgejo: recreated secret

--- a/apps/production/forgejo/forgejo-admin-secret.yaml
+++ b/apps/production/forgejo/forgejo-admin-secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 stringData:
-    email: ENC[AES256_GCM,data:xOHMQnWLTn7Ps/Pjm/+/NkI=,iv:YVo9Ilp5WvvpwF3zmBoOaMdxuL509BMn8stRaUVPkXI=,tag:/e+KicBKJfhGLQKK6wRIBA==,type:str]
-    password: ENC[AES256_GCM,data:EEQi3E4DU95Lp/xC80TMikqdtImcWeEnYhkUQwpzDYA=,iv:ZsJWrJWBpCFsZ/TZvW73g/40R9ZS4ySACsIIb4illcw=,tag:BCBJ9PidgHNkB8L/7U032w==,type:str]
-    username: ENC[AES256_GCM,data:qBB5,iv:gE2CvFhlBnNKHvR0o3AJ4cmqkgnH0Eq/FD4vZDPizvY=,tag:mlrWp+vh1O94CgW1XC5pRA==,type:str]
+    email: ENC[AES256_GCM,data:nPhQE1Emi6LvrZbihR5+ByY=,iv:u6lxw5/1ZEc7ZD10itd+XZjSwuPIBpOhd8jw84gSBe8=,tag:A+cLblT1/TQb8op7V35/gA==,type:str]
+    password: ENC[AES256_GCM,data:UAJKo+j1/yN26O8qQJXWytHExi5LU7ulaE9BQa7wpc4=,iv:a+9MOUbAOWclSKXlb2LpmCiVyKyp3Awi8uNqntKb1S0=,tag:nYEag7+qaD704cpBmr7MuA==,type:str]
+    username: ENC[AES256_GCM,data:jTXO,iv:7Cm2+f3GxkAdF0g7m+DASDvCJB9odL5JZuHXwPFYypM=,tag:17B6HPBIuDA2cIBqvPTimw==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -22,14 +22,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzVGVtckVsZHlrU2VyWHZE
-            Z3ZPV0RDTnFJanRkaGZkWm9XM1JZcDk2eFJZCk1QaDRlZGxyT2hNQmFZbnBhVHRB
-            K3YvUUJEZVpDdmllTmt3M09rT0JMaXcKLS0tIE12QWJxTzlhUW9sVWd1UmlKM3ho
-            NGw0blhBbEdXUlJWOVhqNGpqOEVMM3MKTDhC12rxExwUzYoKfZnuyA2N9HeZaT8Y
-            Gz+1uimYEpQNET+oL0/m0jdEX4WvC+oFyznB9V9jP9B44BFTUS3AAA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRVUJFZ3gvcC80NXZPa25J
+            cjF3WC83QzNjQndDTlp3MlJHd3BRMWNqbzFjClpza3p2dkhKMERjaFBMRHh1QWJP
+            clVsYkExRFRROEEzL00yQysvWVhQT28KLS0tIDN2NmtIWlI3UXpneXk3SFU3bkJN
+            ems1VGtvVG1nTzNTU3EvUzJVQXNxMlUKPq3e/x2WI8dmubiCW3kas+URkc+25wo/
+            I8iQ1cOeN1rXIEK3R4Rc0FFrtNOm7smHwOa0Hi6NRF4u0RSWuHeLVQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-03T20:01:54Z"
-    mac: ENC[AES256_GCM,data:Udb93YGLO5J/UAcDG7oeV5LigDCY7C6t4KSecZ4Aygd4s6LmQjrrJP8pd/xUTp188tH9Q36nn0n31minHZktgzes3FNUB4r8ptLGr8rf3PG5Kb5jXCmqY1YQiA/1Ee6LooZ7iwdz+7aUeipLe6+1xAq6ygCWhztxXeq5GHS6r7U=,iv:XbNXy7H3Cz9+LmxMZ5vHXEcAGDfzJ71iwsAbXN89nrs=,tag:wAQBgw5TIFBAONftVHXZEA==,type:str]
+    lastmodified: "2024-12-03T20:40:54Z"
+    mac: ENC[AES256_GCM,data:VheFZAyu7hgK0fCPXME9UMYv9Td9OfGr5a5OIeyrIaV1A3qRQEssHYAHNzandqTmlFdTFox3RBFwTzepxFHBf40TCcyhg4SN/us2V9f1hlHtLeI8Iy/3iR1kWBAemdpScUTCDT+fTAdmLv/8x1kwyeS/wY/TTWqDa8B12yOqISE=,iv:dpeweHUzscysMcgYY8ZZDjW1GMs9uEnAZE8zQstgrlk=,tag:BzeOLob2RI0dyZGqKN/aSA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
