--- a/clusters/production/apps.yaml
+++ b/clusters/production/apps.yaml
@@ -124,7 +124,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: foegejo
+  name: forgejo
   namespace: flux-system
 spec:
   decryption:
