--- a/apps/base/forgejo/manifest.yaml
+++ b/apps/base/forgejo/manifest.yaml
@@ -85,6 +85,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: forgejo-postgres-cluster
+  namespace: forgejo
 spec:
   instances: 3
   imageName: ghcr.io/cloudnative-pg/postgresql:17.0
