forgejo: renamed claim secret.

--- a/apps/production/forgejo/forgejo-claim-secret.yaml
+++ b/apps/production/forgejo/forgejo-claim-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: forgejo-shared-storage
+    name: gitea-shared-storage
     namespace: forgejo
     annotations:
         meta.helm.sh/release-name: forgejo
