--- a/apps/base/forgejo/manifest.yaml
+++ b/apps/base/forgejo/manifest.yaml
@@ -66,7 +66,7 @@ spec:
           REQUIRE_SIGNIN_VIEW: true
         database:
           DB_TYPE: postgres
-          HOST: postgresql
+          HOST: forgejo-postgres-cluster-rw
           NAME: forgejo
           USER: forgejo
         indexer:
