--- a/apps/base/forgejo/manifest.yaml
+++ b/apps/base/forgejo/manifest.yaml
@@ -76,7 +76,7 @@ spec:
         - name: forgejo__DATABASE__PASSWD
           valueFrom:
             secretKeyRef:
-              name: forgejo-postgresql
+              name: forgejo-cnpg
               key: password
     service:
       type: ClusterIP
