--- a/apps/base/forgejo/manifest.yaml
+++ b/apps/base/forgejo/manifest.yaml
@@ -73,7 +73,7 @@ spec:
           ISSUE_INDEXER_TYPE: bleve
           REPO_INDEXER_ENABLED: true
       additionaConfigFromEnvs:
-        - name: FORGEJO__DATABASE__PASSWD
+        - name: GITEA_DATABASE__PASSWD
           valueFrom:
             secretKeyRef:
               name: forgejo-cnpg
