forgejo: enabled push to create repo

--- a/apps/base/forgejo/manifest.yaml
+++ b/apps/base/forgejo/manifest.yaml
@@ -64,6 +64,7 @@ spec:
           DISABLE_REGISTRATION: true
           SHOW_REGISTRATION_BUTTON: false
           REQUIRE_SIGNIN_VIEW: true
+          ENABLE_PUSH_CREATE_USER: true
         database:
           DB_TYPE: postgres
           HOST: forgejo-postgres-cluster-rw
