--- a/clusters/production/infrastructure.yaml
+++ b/clusters/production/infrastructure.yaml
@@ -233,82 +233,82 @@ spec:
   path: ./infrastructure/production/cloudflare-ddns
   prune: true
   wait: true
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: velero
-  namespace: flux-system
-spec:
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-age
-  interval: 1h
-  retryInterval: 1m
-  timeout: 5m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./infrastructure/production/velero
-  prune: true
-  wait: true
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: velero-config
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: velero
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-age
-  interval: 1h
-  retryInterval: 1m
-  timeout: 5m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./infrastructure/production/velero/config
-  prune: true
-  wait: true
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: external-snapshotter-client
-  namespace: flux-system
-spec:
-  interval: 1h
-  path: ./client/config/crd
-  retryInterval: 1m
-  sourceRef:
-    kind: GitRepository
-    name: external-snapshotter
-  targetNamespace: default
-  timeout: 5m
-  prune: true
-  wait: true
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: external-snapshotter-snapshot-controller
-  namespace: flux-system
-spec:
-  interval: 1h
-  path: ./deploy/kubernetes/snapshot-controller
-  retryInterval: 1m
-  sourceRef:
-    kind: GitRepository
-    name: external-snapshotter
-  targetNamespace: default
-  timeout: 5m
-  prune: true
-  wait: true
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: velero
+#   namespace: flux-system
+# spec:
+#   decryption:
+#     provider: sops
+#     secretRef:
+#       name: sops-age
+#   interval: 1h
+#   retryInterval: 1m
+#   timeout: 5m
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
+#   path: ./infrastructure/production/velero
+#   prune: true
+#   wait: true
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: velero-config
+#   namespace: flux-system
+# spec:
+#   dependsOn:
+#     - name: velero
+#   decryption:
+#     provider: sops
+#     secretRef:
+#       name: sops-age
+#   interval: 1h
+#   retryInterval: 1m
+#   timeout: 5m
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
+#   path: ./infrastructure/production/velero/config
+#   prune: true
+#   wait: true
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: external-snapshotter-client
+#   namespace: flux-system
+# spec:
+#   interval: 1h
+#   path: ./client/config/crd
+#   retryInterval: 1m
+#   sourceRef:
+#     kind: GitRepository
+#     name: external-snapshotter
+#   targetNamespace: default
+#   timeout: 5m
+#   prune: true
+#   wait: true
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: external-snapshotter-snapshot-controller
+#   namespace: flux-system
+# spec:
+#   interval: 1h
+#   path: ./deploy/kubernetes/snapshot-controller
+#   retryInterval: 1m
+#   sourceRef:
+#     kind: GitRepository
+#     name: external-snapshotter
+#   targetNamespace: default
+#   timeout: 5m
+#   prune: true
+#   wait: true
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
