velero: changed order of operations

--- a/clusters/production/infrastructure.yaml
+++ b/clusters/production/infrastructure.yaml
@@ -262,6 +262,7 @@ metadata:
 spec:
   dependsOn:
     - name: external-snapshotter-gitrepo
+    - name: velero
   interval: 1h
   path: ./client/config/crd
   retryInterval: 1m
@@ -299,7 +300,6 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: external-snapshotter-client
     - name: external-snapshotter-snapshot-controller
   decryption:
     provider: sops
