--- a/infrastructure/production/filen-cli/kustomization.yaml
+++ b/infrastructure/production/filen-cli/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../../base/filen-cli
   - filen-cli-secret.yaml
+  - filen-cli-claim.yaml
 patches:
   - path: patch.yaml
     target:
