--- a/clusters/production/infrastructure.yaml
+++ b/clusters/production/infrastructure.yaml
@@ -347,7 +347,7 @@ spec:
     secretRef:
       name: sops-age
   dependsOn:
-    - name: longhorn
+    - name: longhorn-config
   interval: 1h
   retryInterval: 1h
   timeout: 2h
@@ -369,6 +369,8 @@ spec:
     secretRef:
       name: sops-age
   interval: 1h
+  dependsOn:
+    - name: longhorn-config
   retryInterval: 1h
   timeout: 2h
   sourceRef:
