filen-cli: changed mount path.
filen-cli: changed mount path.

--- a/infrastructure/base/filen-cli/manifest.yaml
+++ b/infrastructure/base/filen-cli/manifest.yaml
@@ -48,7 +48,7 @@ spec:
         ports:
         - containerPort: 80
         volumeMounts:
-          - mountPath: /filen-cli
+          - mountPath: /root/.config/filen-cli/
             name: filen-cli-claim
           # resources: {}
       restartPolicy: Always
