--- a/infrastructure/base/filen-cli/manifest.yaml
+++ b/infrastructure/base/filen-cli/manifest.yaml
@@ -44,7 +44,8 @@ spec:
               secretKeyRef:
                 name: filen-cli-secret
                 key: s3-secret-access-key
-        args: ["--email $(EMAIL)", "--password $(PASSWORD)", "s3", "--s3-access-key-id $(S3-ACCESS-KEY-ID)", "--s3-secret-access-key $(S3-SECRET-ACCESS-KEY)"]
+        command: ["node"]
+        args: ["filen", "s3", "--s3-access-key-id $(S3-ACCESS-KEY-ID)", "--s3-secret-access-key $(S3-SECRET-ACCESS-KEY)"]
         ports:
         - containerPort: 80
         volumeMounts:
