--- a/infrastructure/base/filen-cli/manifest.yaml
+++ b/infrastructure/base/filen-cli/manifest.yaml
@@ -24,28 +24,18 @@ spec:
       containers:
       - name: filen-cli
         env:
-          - name: EMAIL
-            valueFrom:
-              secretKeyRef:
-                name: filen-cli-secret
-                key: email
-          - name: PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: filen-cli-secret
-                key: password
-          - name: S3-ACCESS-KEY-ID
+          - name: S3_ACCESS_KEY_ID
             valueFrom:
               secretKeyRef:
                 name: filen-cli-secret
                 key: s3-access-key-id
-          - name: S3-SECRET-ACCESS-KEY
+          - name: S3_SECRET_ACCESS_KEY
             valueFrom:
               secretKeyRef:
                 name: filen-cli-secret
                 key: s3-secret-access-key
         # command: ["node"]
-        # args: ["filen", "s3", "--s3-access-key-id $(S3-ACCESS-KEY-ID)", "--s3-secret-access-key $(S3-SECRET-ACCESS-KEY)"]
+        # args: ["filen", "s3", "--s3-access-key-id $(S3_ACCESS_KEY_ID)", "--s3-secret-access-key $(S3_SECRET_ACCESS_KEY)"]
         ports:
         - containerPort: 80
         volumeMounts:
