--- a/infrastructure/base/filen-cli/manifest.yaml
+++ b/infrastructure/base/filen-cli/manifest.yaml
@@ -34,8 +34,8 @@ spec:
               secretKeyRef:
                 name: filen-cli-secret
                 key: s3-secret-access-key
-        # command: ["node"]
-        # args: ["filen", "s3", "--s3-access-key-id $(S3_ACCESS_KEY_ID)", "--s3-secret-access-key $(S3_SECRET_ACCESS_KEY)"]
+        command: ["/bin/sh"]
+        args: ["-c", "node filen s3 --s3-access-key-id $S3_ACCESS_KEY_ID --s3-secret-access-key $S3_SECRET_ACCESS_KEY"]
         ports:
         - containerPort: 80
         volumeMounts:
