--- a/infrastructure/base/filen-cli/manifest.yaml
+++ b/infrastructure/base/filen-cli/manifest.yaml
@@ -35,9 +35,9 @@ spec:
                 name: filen-cli-secret
                 key: s3-secret-access-key
         command: ["/bin/sh"]
-        args: ["-c", "node filen s3 --s3-access-key-id $S3_ACCESS_KEY_ID --s3-secret-access-key $S3_SECRET_ACCESS_KEY"]
+        args: ["-c", "node filen s3 --s3-access-key-id $S3_ACCESS_KEY_ID --s3-secret-access-key $S3_SECRET_ACCESS_KEY --s3-port 8080"]
         ports:
-        - containerPort: 80
+        - containerPort: 8080
         volumeMounts:
           - mountPath: /root/.config/filen-cli/
             name: filen-cli-claim
@@ -59,8 +59,8 @@ spec:
     app: filen-cli
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 80
+    port: 8080
+    targetPort: 8080
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
