filen-cli: rotated secret

--- a/infrastructure/production/filen-cli/filen-cli-secret.yaml
+++ b/infrastructure/production/filen-cli/filen-cli-secret.yaml
@@ -5,10 +5,10 @@ metadata:
     namespace: filen-cli
 type: Opaque
 stringData:
-    email: ENC[AES256_GCM,data:s84h4/TReyAE5g2khZtdgBA=,iv:zZ1Kg/W17k5fnctvOAIiffa1OqOs+o7exEAum0WXuTI=,tag:NWcsSu/DLMaJ3A9EGpkLrg==,type:str]
-    password: ENC[AES256_GCM,data:y08+qWGvuLyt6cVPRbfTtsqh0J+S2v8KKIXx2VfzZoNjzXvbTCob/y6dN9ML7in/AwBs49MC3EHp5hG8yqaguPDbavCaCTjX9J0JENBp3y6dV1NnGTaZC74WT7V/4B9nxmGehM6z4z9QrhCuu2JKGsbftc7sJjL44Om6pJl7aKI=,iv:3DhCov6tCpUghv6cbR7kXKnvmzR8wdDGuXhrHoE3ZR4=,tag:xjNkJ5JbVtm85wC4T9FU/w==,type:str]
-    s3-access-key-id: ENC[AES256_GCM,data:5OOPkx/bsh6MAFwKT0nnG8d0,iv:Tjv7gSc6V3z7SYkpapFk1EKioaQvK3QmBQNHGz/F7oA=,tag:sFU+jP76yXBy2RAkJu5MRw==,type:str]
-    s3-secret-access-key: ENC[AES256_GCM,data:o0t0oVumPfd3y8RUTgBojX9UdPIOL8A024YRHYGUcQU2OtA6iuc=,iv:xhTAjB3pVYdFYJxZqwZ3EWfVSPg/Rs2899cVnQrASwA=,tag:a9A/gmKd7YVCVPyZxqH/Ng==,type:str]
+    email: ENC[AES256_GCM,data:NwVfW6OG1zFFm4VN4PKGn7Y=,iv:4z5kHFi5igTxazu06T0JpSj99YzjMKd1EpCxr510D8Y=,tag:sZDC2TXUcUDufYaCGqmlZg==,type:str]
+    password: ENC[AES256_GCM,data:p91uT8DbC2gYXVkkRvemTZqnE5FM8EYUmX2AxuFRrglgmaw2lzKxtv87ozl6x9L1d+bzhKUau6NLhX1CAPflwZ38idJ5I2bESGh58wr5TyhTfWQv7dcIR5NAAonmCH8mMA4Ei9sq5IzW0oGdDQ6oIID+XPf3vQQ33Q5IWbecuiM=,iv:LINZSifBsmSHytO4IaTw+NE6DTAmBCma0p8KmvOTs3M=,tag:ScwW0WX3efQXt55lJkXpDA==,type:str]
+    s3-access-key-id: ENC[AES256_GCM,data:+Q+FfOE+oaM=,iv:oGIUgYxVuIZi9guLrwxXiiIj4gu0qnM0ikqjM0BVQ4M=,tag:VcULz0CBeK1Da734G6uDfQ==,type:str]
+    s3-secret-access-key: ENC[AES256_GCM,data:JjFBruW1BgAzyEZHOCkNk5NIaLkZ6eE7DBdAhUW3yTiw,iv:YsvUCzq0Fc28MjJKktPHu5BC8M0d9JPIH3BvZ/EPvFQ=,tag:jzu3BH2C2kzRTjnXVrrnJw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +18,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOUUhJWHFHVjhIazRsS216
-            aDJLZmpGZjlGeGJWK25xUnVaVXQrckRzN2hnCjNpZ2VHMTNZVHk2ZThaQmU3Nkwv
-            OTNqb3lNWWdNa1JXdlhoZ25ybFVyNU0KLS0tIGJUWnZWTW5UaXZnSHNXSkJSNlZv
-            S0NuVTVxLzhmdnVLOXMxM0krR3MrTUUKb0BawEB3eWuT912hfgT9xlmtXPTxEGEn
-            P9iMFyOumNmZUG28MT7XADA0ll5Eah+lKbXlwzlf739cjn3BWFBACw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCNkFkZ0FYdDBHZ3d4T1lr
+            RHVjYmNLeEllTVJXa25ncmRqcmtnUjN6cWxzCm5iY2puSDFvby9qcmhocEkya09x
+            U0ZhZlhxU0dGODI5eUhvUXNIcFBlS1EKLS0tIDVHenc4NmJqcFB5cXFlbHAzTmlI
+            UDhZQXIydVUxUWppelN2R0dkZFFkTk0KzsqhfiXcArvkraHTmsTTDFtg48+ylw5f
+            NcGD0uK2pw+nr4hlmVpP8SeLEUsUJovD5nGPFZxf3Tzh7bo245f9kg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-07T16:21:11Z"
-    mac: ENC[AES256_GCM,data:h/H9d6H0EVq9+F7ReaBBNAVnfnEalQiwE8swWg0QElIw5CPY+Vc7q5vEbsI2awovaXBvFEFGPuRsi3WW7MP6ryads/9NdMQrTd0h+iyEmg+4wN4MKNmXmt5r9tvtMOJf3ijzQE9+0pJQNePxIDdzr4LmGhBeS5BVbGAXBjDDr+g=,iv:mrRHPkJVAllbcsVtA3lmskNHTDUApqoOczmMqod8qCA=,tag:Fj5jhZ2O5yTO4xcLqdJT9w==,type:str]
+    lastmodified: "2024-12-09T16:30:33Z"
+    mac: ENC[AES256_GCM,data:o+isfGpi18J4VLOatDXBukgu6C7Z6237tEdYItN3rnDg7oMuztdhaB6vtLUooDMASSn3GDEFkRA1MQ+IorRI24XTrLSYru/tBdVujEgHPIL5Pu3urkbDzuVoUwLwsxt3BRpfZ3zc5mBqVUzRIuwzxBYUpdYCx73zW2qTV+49Q94=,iv:wtVIlXFFOpJHvVgevAvRLPdNmJnpeSI/HixB9AUKlZk=,tag:X4TSeFYwxQhsi2aluxBOxg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
