velero: changed filen secret

--- a/infrastructure/production/velero/velero-filen-secret.yaml
+++ b/infrastructure/production/velero/velero-filen-secret.yaml
@@ -4,11 +4,8 @@ metadata:
     name: velero-filen-secret
     namespace: velero
 type: Opaque
-stringData: null
-cloud: |
-    [default]
-    aws_access_key_id=Prankish3-Clatter4
-    aws_secret_access_key=Scallion0-Boogieman6-Volatile5-Denote7
+stringData:
+    cloud: ENC[AES256_GCM,data:NnYdG5IvMcxwSEdi9VWfLSnixkrF61iDF2OGei5nUsy0cJrqJwkpWC9KZlbPQPvnbMauJ5rCucyNj3zZ6Mir2bZTne61scRDwWVjUgzC21T/H+BbCJSa2l7iu22Vj2XwmQ==,iv:tsvn3n+cZ/GAQ30rpHBvbVwCE1Y8QfHTrTnm4ioA1PY=,tag:u8qN4oHfKmAEueJ0us7ckg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +15,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0cUFLNEMrcE9qWkhXZ3R5
-            SXd1TzkwaEJjcWpnNi82OURJSk5DakR0MXlVClU3V09IWnhia2doWnFaZTBSUFlF
-            MmhVNThPeTdtall1V0FKTitmR2NFWTQKLS0tIGVOblV1amNMTEtuSitKVzRXRlpW
-            aFRqVVdlSi9Pa3Q4R3ZxNnBLM01CL3cKOk4fr73BO4Gb7Nva8Y5SyBxNcCBJnEeA
-            ENgwme68CZJ99f0Qb9xJUhdLWoAq3H4qG5LCTklqWTZURko/DDoaWw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZMDZVNzh0aWQ2eit5Tkc2
+            NTlhVThQNlVMMDFuRnpZSUY3b255OXA2S2xvClh3MkNPT29Jb1EvTU11Y2FwZmo4
+            cFROZHF4UmExbElBbEVvTGpnVXo0QjgKLS0tIFA2N0l2MjVWam5mK2hOeWFRSzRj
+            anJyNFlqL05mZ2NEYVR6MzBIUzd5ZDQKZgHKYQuaq0vH6Wi1rE8Hyx2HuUWEFwCn
+            0502PvVEmP20+jdjVQN2FFYWRzgjUJR3LAJQB1FhsE1lMVSe7nmJ8Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-09T05:11:56Z"
-    mac: ENC[AES256_GCM,data:9x3hQ08AC5ed7pMy5JgGRsVh/fivNQQl+sHMM/3tpN5Kr/kualmp3xYXGOpqjwYgYEJG5MKBVmy1F8liaIyBeNYMYxlBUDdWTmiNP03ub8OgMvM80+4FBLj88BtfyUHj6SHOBgdDbIZOIUe8zQA3btwUriMuHTClJsqu8eSYxSw=,iv:daYIt0LH809671deVbF0U6n7lOZBDW8lkaeirx+hgxE=,tag:X+80LKaYDevbMU1pEqM8Vw==,type:str]
+    lastmodified: "2024-12-09T16:56:38Z"
+    mac: ENC[AES256_GCM,data:ctuPuAPiD1zgo8T8dGsXQvvkyKq7xM7jYH88NOKC5aB/DNwpQsFA158vl9Se76EhqZb6wLnkI6eDuNAi1aFfNdNJ60zZW/7YgPTItKt2LERuVei8ph5mqzJHqf91CFBW6h1306/cMXQSoN4YxmpcQq681fJT0Z8De9KKcure7Y4=,iv:tMmOziNWX9dRsi3eQKvlwbIbHxgZ38Cpfzy8DERNsIU=,tag:dVWjB0lWzVHqVdvShiD/1g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
