Added script to decrypt files

--- a/infrastructure/production/filen-cli/filen-cli-secret.yaml
+++ b/infrastructure/production/filen-cli/filen-cli-secret.yaml
@@ -5,10 +5,12 @@ metadata:
     namespace: filen-cli
 type: Opaque
 stringData:
-    email: ENC[AES256_GCM,data:NwVfW6OG1zFFm4VN4PKGn7Y=,iv:4z5kHFi5igTxazu06T0JpSj99YzjMKd1EpCxr510D8Y=,tag:sZDC2TXUcUDufYaCGqmlZg==,type:str]
-    password: ENC[AES256_GCM,data:p91uT8DbC2gYXVkkRvemTZqnE5FM8EYUmX2AxuFRrglgmaw2lzKxtv87ozl6x9L1d+bzhKUau6NLhX1CAPflwZ38idJ5I2bESGh58wr5TyhTfWQv7dcIR5NAAonmCH8mMA4Ei9sq5IzW0oGdDQ6oIID+XPf3vQQ33Q5IWbecuiM=,iv:LINZSifBsmSHytO4IaTw+NE6DTAmBCma0p8KmvOTs3M=,tag:ScwW0WX3efQXt55lJkXpDA==,type:str]
-    s3-access-key-id: ENC[AES256_GCM,data:+Q+FfOE+oaM=,iv:oGIUgYxVuIZi9guLrwxXiiIj4gu0qnM0ikqjM0BVQ4M=,tag:VcULz0CBeK1Da734G6uDfQ==,type:str]
-    s3-secret-access-key: ENC[AES256_GCM,data:JjFBruW1BgAzyEZHOCkNk5NIaLkZ6eE7DBdAhUW3yTiw,iv:YsvUCzq0Fc28MjJKktPHu5BC8M0d9JPIH3BvZ/EPvFQ=,tag:jzu3BH2C2kzRTjnXVrrnJw==,type:str]
+    email: ENC[AES256_GCM,data:HpKJ82wt8+ULHnAHUnE1etM=,iv:s88MTm+XoktOp7pEY0xMTVPuqqZNb4wGXi3y/OpIazA=,tag:+4eBaacSFQ/RQ1kp3YMHBg==,type:str]
+    password: ENC[AES256_GCM,data:7FnsYT/vkkG87cTs1Ab88klc5GjLecplvGtJW2TVfzt8RfGQSfm3JTg9ITRXCjDtN8rlP9dyePgsCAOSt5Qerl7xuIiRMltDV/TDmXpVwhn8gMVriI6Ig6M9v3jLgag8WMhPkZhN7UPvNztevCMuEhHOg8OR4b8RWR1EBVs6Tro=,iv:bzqsfjcGAQDfeR+BotHLF9VVBo00QO4ROvumPuYMrh0=,tag:I6Sduu+nhfMdVrgjBow7SQ==,type:str]
+    s3-access-key-id: ENC[AES256_GCM,data:V59tEeRiQSs=,iv:4rSxbbl/joIqWFdDrL4W/ZYrxYLQajpu5dVe7Xo6a44=,tag:LgILqyz1g5gxp2/IoHRvJQ==,type:str]
+    s3-secret-access-key: ENC[AES256_GCM,data:0TwBLflGXSowYrM/a22j6szV4ymQTgjbkCXgOTx8Td4F,iv:Q4gdN6w8FH9+IhZdoSlaNC5lvOYb8IIv6un2jdYpI1U=,tag:nf60Ol1Eakllz9EQKy871A==,type:str]
+    w-user: ENC[AES256_GCM,data:snjxjsxp2Xo=,iv:nRa+64nQF3/jPdH+GiPnQLqKTA5XkyzwU3v1JWfiMkI=,tag:EfbGNHYoAIxFNfr0qEawWw==,type:str]
+    w-password: ENC[AES256_GCM,data:VHOTKxsd3FGDXdV8PNcGeAsk5zOtBxWIhxWblQGnd8kompVWCCfXOu8dlxE=,iv:ZH5u+TOjXJe99/sWFEQt1j59S9Dbmwyetm8faJcKN+w=,tag:JqMUEDAOBu8V6c4eSZ/Tww==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +20,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCNkFkZ0FYdDBHZ3d4T1lr
-            RHVjYmNLeEllTVJXa25ncmRqcmtnUjN6cWxzCm5iY2puSDFvby9qcmhocEkya09x
-            U0ZhZlhxU0dGODI5eUhvUXNIcFBlS1EKLS0tIDVHenc4NmJqcFB5cXFlbHAzTmlI
-            UDhZQXIydVUxUWppelN2R0dkZFFkTk0KzsqhfiXcArvkraHTmsTTDFtg48+ylw5f
-            NcGD0uK2pw+nr4hlmVpP8SeLEUsUJovD5nGPFZxf3Tzh7bo245f9kg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5eWh1TXRpVzkxb2ttSWE2
+            U2lFRHRMM2VRTGVoWXhQWG4zV1dPbGkvWGs0CnJ1WnNWb0hrMWFYQ1pPd282NStK
+            ak5HRXFpNEMyUHNMd05GZFNEZXlJbG8KLS0tIGpoYXJxVFVRTkN2VTZTWmxMdkZF
+            VmRLanRHY05Pcyt0RVFMbGdDdmswUkUKXzPkMcDVDgb7FFzV3zGnX8CbxvRr4PXh
+            k1g2Y0I+QsYHdLlZXV0yhMYKqGeZJ7hDrc4wjmqjBGxzcaC/s2IIbA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-09T16:30:33Z"
-    mac: ENC[AES256_GCM,data:o+isfGpi18J4VLOatDXBukgu6C7Z6237tEdYItN3rnDg7oMuztdhaB6vtLUooDMASSn3GDEFkRA1MQ+IorRI24XTrLSYru/tBdVujEgHPIL5Pu3urkbDzuVoUwLwsxt3BRpfZ3zc5mBqVUzRIuwzxBYUpdYCx73zW2qTV+49Q94=,iv:wtVIlXFFOpJHvVgevAvRLPdNmJnpeSI/HixB9AUKlZk=,tag:X4TSeFYwxQhsi2aluxBOxg==,type:str]
+    lastmodified: "2024-12-09T20:10:13Z"
+    mac: ENC[AES256_GCM,data:5g2dwMb17MRi6pNYR/q4e35uhqryAZ/XrvZbV6iR/FzvHhPrIifrboipRKBbXm9lsLN0kH2NzFx5fEuqSCfwvRwu6sPULMtCZOGowD7PZBgnAU15ZdLYkVMNGwgBBKi6+L2zAqJv3K92pgWTk4JtAWytrDGPDgDLe45823NfPHE=,iv:ZdDjQWXQ0hu417IKYEMzfElMaVWouTGyDKmzD2fjupc=,tag:xWy0899fuXoEbj8Vo2p6Bw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.8.1
+    version: 3.9.1
