--- a/infrastructure/base/filen-cli/manifest.yaml
+++ b/infrastructure/base/filen-cli/manifest.yaml
@@ -34,10 +34,21 @@ spec:
               secretKeyRef:
                 name: filen-cli-secret
                 key: s3-secret-access-key
+          - name: W_USER
+            valueFrom:
+              secretKeyRef:
+                name: filen-cli-secret
+                key: w-user
+          - name: W_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: filen-cli-secret
+                key: w-password
         command: ["/bin/sh"]
-        args: ["-c", "node filen s3 --s3-access-key-id $S3_ACCESS_KEY_ID --s3-secret-access-key $S3_SECRET_ACCESS_KEY --s3-port 8080"]
+        args: ["-c", "node filen s3 --s3-access-key-id $S3_ACCESS_KEY_ID --s3-secret-access-key $S3_SECRET_ACCESS_KEY --s3-port 8080 webdav --w-user $W_USER --w-password $W_PASSWORD --w-port 9090"]
         ports:
         - containerPort: 8080
+        - containerPort: 9090
         volumeMounts:
           - mountPath: /root/.config/filen-cli/
             name: filen-cli-claim
@@ -61,6 +72,9 @@ spec:
   - protocol: TCP
     port: 8080
     targetPort: 8080
+  - protocol: TCP
+    port: 9090
+    targetPort: 9090
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
